add: test variant styles

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Selawik' !important;
+  font-family: 'Inter' !important;
   color: #ddd;
   overflow: hidden;
   cursor: default;
@@ -10,7 +10,7 @@
 }
 
 html {
-  background: #191919;
+  background: #1B1B1B;
   font-size: 0.83333vw;
 }
 
